fix wrong color for addmal

--- a/src/pages/DreamSub/style.less
+++ b/src/pages/DreamSub/style.less
@@ -11,6 +11,6 @@ body.dark {
     background-color: #1f1f1f !important;
   }
 }
-#malRating,#malStatus,#malEpisodes,#malTotal,#malUserRating {
+#malRating,#malStatus,#malEpisodes,#malTotal,#malUserRating,#AddMal {
   color: #1291bc !important;
 }
